--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image prototype model stand metal">
                             <div class="portfolio-item">
                                 <div class="hover-bg"> 
-                                        <img src="img/portfolio/01-vertigo.png" class="img-responsive" alt="Project Title">
+                                        <img src="../img/portfolio/01-vertigo.png" class="img-responsive" alt="Vertigo: window cleanning sistem">
                                         <div class="cap1">
                                             <h3>Vertigo</h3>
-                                            <p>Develop of a widnow cleanning</p>
+                                            <p>Develop of a window cleaning</p>
                                         </div>
                                         <div class="cap2">
                                             <a href="vertigo-EN.html" ><p class="text-center">See more</p></a>
@@ -254,10 +254,10 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-bike.png" class="img-responsive" alt="Project Title">
+                                    <img src="img/portfolio/01-bike.png" class="img-responsive" alt="Bicle station for Montevideo goverment (Uruguay)">
                                     <div class="cap1">
                                         <h3>Bicycle Station</h3>
-                                        <p>Desing and render for Montevide goverment (Uruguay)</p>
+                                        <p>Desing and render for Montevideo goverment (Uruguay)</p>
                                     </div>
                                     <div class="cap2">
                                         <a href="bikes-EN.html" class="text-center"><p class="text-center">See more</p></a>
@@ -269,7 +269,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image model metal">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-metal.png" class="img-responsive" alt="Project Title">
+                                    <img src="img/portfolio/01-metal.png" class="img-responsive" alt="Box laser cut metal and cnc creation">
                                     <div class="cap1">
                                         <h3>Metal Design</h3>
                                         <p>Laser cut metal and cnc creation</p>
@@ -284,7 +284,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image stand model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-stanCva.png" class="img-responsive" alt="Project Title">
+                                    <img src="img/portfolio/01-stanCva.png" class="img-responsive" alt="Exibtion Stand Design">
                                     <div class="cap1">
                                         <h3 class="h3-mob">CVA SA</h3>
                                         <p class="p-mob">Exibtion Stand Design</p>
@@ -299,7 +299,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image packaging model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-pack.png" class="img-responsive" alt="Project Title">
+                                    <img src="img/portfolio/01-pack.png" class="img-responsive" alt="Design and develop of packaging of Coconuts milk">
                                     <div class="cap1">
                                         <h3>Coconuts Milk</h3>
                                         <p>Design and develop of packaging</p>
@@ -314,7 +314,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-render.png" class="img-responsive" alt="Project Title">
+                                    <img src="img/portfolio/01-render.png" class="img-responsive" alt="wheel carrier 3D model">
                                     <div class="cap1">
                                         <h3>3D Modeling & Renders</h3>
                                         <p>Solidworks and keyshot</p>
@@ -329,7 +329,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image prototype">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-upa.png" class="img-responsive" alt="Project Title">
+                                    <img src="img/portfolio/01-upa.png" class="img-responsive" alt="Upa! a Baby carring prototype">
                                     <div class="cap1">
                                         <h3>UPA!</h3>
                                         <p>Baby carring prototype</p>
@@ -344,7 +344,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image prototype model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-dandii.png" class="img-responsive" alt="Project Title">
+                                    <img src="img/portfolio/01-dandii.png" class="img-responsive" alt="Fruit dryer for cocktails">
                                     <div class="cap1">
                                         <h3  class="h3-mob">dandii</h3>
                                         <p class="p-mob">Fruit dryer for cocktails</p>
@@ -359,7 +359,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image prototype">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-inter.png" class="img-responsive" alt="Project Title">
+                                    <img src="img/portfolio/01-inter.png" class="img-responsive" alt="Workstation with Knoll´s designs">
                                     <div class="cap1">
                                         <h3>Furniture</h3>
                                         <p>Workstation with Knoll´s designs</p>
@@ -374,7 +374,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image prototype">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-stan.png" class="img-responsive" alt="Project Title">
+                                    <img src="img/portfolio/01-stan.png" class="img-responsive" alt="Design of exibition stand for Coconuts Milk">
                                     <div class="cap1">
                                         <h3>Coconuts Milk</h3>
                                         <p>Design of exibition stand</p>
