--- a/Espanol/portfolio-ES.html
+++ b/Espanol/portfolio-ES.html
@@ -194,7 +194,7 @@
                 </div>
                 <div class="portfolio-EN gallery-image packaging render">
                     <div class="each-item">
-                        <img class="port-image" src="../img/Portfolio/Packaging-01.png" alt="Packaging for coconuts milk brand"/>
+                        <img class="port-image" src="../img/Portfolio/01-pack.png" alt="Packaging for coconuts milk brand"/>
                         <div class="cap1">
                             <h3 class="h3-mob">Leche de coco</h3>
                             <p class="p-mob">Diseño y desarrollo de familia de producto</p>
@@ -206,7 +206,7 @@
                 </div>
                 <div class="portfolio-EN gallery-image stands">
                     <div class="each-item">
-                        <img class="port-image" src="../img/Portfolio/Stand-01.png" alt="Exibition stand for coconuts milk product"/>
+                        <img class="port-image" src="../img/Portfolio/01-stan.png" alt="Exibition stand for coconuts milk product"/>
                         <div class="cap1">
                             <h3  class="h3-mob">Leche de coco</h3>
                             <p class="p-mob">Diseño de stan exibidor</p>
@@ -218,7 +218,7 @@
                 </div>
                 <div class="portfolio-EN gallery-image prototypes">
                     <div class="each-item">
-                        <img class="port-image" src="../img/Portfolio/Uoa-01.png" alt="Design and funcional prototype of a babay carryt bag"/>
+                        <img class="port-image" src="../img/Portfolio/01-upa.png" alt="Design and funcional prototype of a babay carryt bag"/>
                         <div class="cap1">
                             <h3  class="h3-mob">UPA!</h3>
                             <p class="p-mob">Mochila portabebes</p>
@@ -230,7 +230,7 @@
                 </div>
                 <div class="portfolio-EN gallery-image prototypes">
                     <div class="each-item">
-                        <img class="port-image" src="../img/Portfolio/inter2.png" alt="Design and funcional prototype of a babay carryt bag"/>
+                        <img class="port-image" src="../img/Portfolio/01-inter.png" alt="Design and funcional prototype of a babay carryt bag"/>
                         <div class="cap1">
                             <h3  class="h3-mob">Mobilirio en carpinteria metalica</h3>
                             <p  class="p-mob">Desarrollo de mobiliario para Knoll´s studio</p>
@@ -242,7 +242,7 @@
                 </div>
                 <div class="portfolio-EN gallery-image render">
                     <div class="each-item">
-                        <img class="port-image" src="../img/Portfolio/Render-01.png" alt="3D design model of a magic box for Steampunk style"/>
+                        <img class="port-image" src="../img/Portfolio/01-render.png" alt="3D design model of a magic box for Steampunk style"/>
                         <div class="cap1">
                             <h3  class="h3-mob">3D Modeling & Renders</h3>
                             <p class="p-mob">Solidworks and keyshot</p>
