--- a/index.html
+++ b/index.html
@@ -235,11 +235,12 @@
                 </div>
                 
                 <div class="row">
-                    <div class="portfolio-items">                    
+                    <div class="portfolio-items text-center">  
+
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image prototype model stand metal">
                             <div class="portfolio-item">
                                 <div class="hover-bg"> 
-                                        <img src="../img/portfolio/01-vertigo.png" class="img-responsive" alt="Vertigo: window cleanning sistem">
+                                        <img src="img/portfolio/01-vertigo.png" class="img-responsive" alt="Vertigo: window cleanning sistem">
                                         <div class="cap1">
                                             <h3>Vertigo</h3>
                                             <p>Develop of a window cleaning</p>
@@ -265,6 +266,22 @@
                                 </div>
                             </div>
                         </div>  
+
+                        
+                        <div class="col-sm-6 col-md-3 col-lg-3 gallery-image model">
+                            <div class="portfolio-item">
+                                <div class="hover-bg">
+                                    <img src="img/portfolio/01-render.png" class="img-responsive" alt="3D model of Van Helsigns box design">
+                                    <div class="cap1">
+                                        <h3>3D Modeling & Renders</h3>
+                                        <p>Solidworks& Keyshot</p>
+                                    </div>
+                                    <div class="cap2">
+                                        <a href="renders-EN.html" class="text-center"><p class="text-center">See more</p></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> 
 
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image model metal">
                             <div class="portfolio-item">
@@ -314,13 +331,13 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-render.png" class="img-responsive" alt="wheel carrier 3D model">
+                                    <img src="img/portfolio/01-renderCVA.png" class="img-responsive" alt="wheel carrier 3D model">
                                     <div class="cap1">
-                                        <h3>3D Modeling & Renders</h3>
-                                        <p>Solidworks and keyshot</p>
+                                        <h3>3D models for CVA SA</h3>
+                                        <p>3D Modeling & Renders</p>
                                     </div>
                                     <div class="cap2">
-                                        <a href="renders-EN.html" class="text-center"><p class="text-center">See more</p></a>
+                                        <a href="cva3D-EN.html" class="text-center"><p class="text-center">See more</p></a>
                                     </div>
                                 </div>
                             </div>
@@ -346,7 +363,7 @@
                                 <div class="hover-bg">
                                     <img src="img/portfolio/01-dandii.png" class="img-responsive" alt="Fruit dryer for cocktails">
                                     <div class="cap1">
-                                        <h3  class="h3-mob">dandii</h3>
+                                        <h3  class="h3-mob">Dandii</h3>
                                         <p class="p-mob">Fruit dryer for cocktails</p>
                                     </div>
                                     <div class="cap2">
