--- a/portfolio-EN.html
+++ b/portfolio-EN.html
@@ -199,7 +199,7 @@
                 </div>
                 <div class="portfolio-EN gallery-image packaging render">
                     <div class="each-item">
-                        <img class="port-image" src="img/Portfolio/Packaging-01.png" alt="Packaging for coconuts milk brand"/>
+                        <img class="port-image" src="img/Portfolio/01-pack.png" alt="Packaging for coconuts milk brand"/>
                         <div class="cap1">
                             <h3 class="h3-mob">Coconuts Milk</h3>
                             <p class="p-mob">Design and develop of packaging</p>
@@ -211,7 +211,7 @@
                 </div>
                 <div class="portfolio-EN gallery-image stands">
                     <div class="each-item">
-                        <img class="port-image" src="img/Portfolio/Stand-01.png" alt="Exibition stand for coconuts milk product"/>
+                        <img class="port-image" src="img/Portfolio/01-stan.png" alt="Exibition stand for coconuts milk product"/>
                         <div class="cap1">
                             <h3  class="h3-mob">Coconuts Milk</h3>
                             <p class="p-mob">Design of exibition stand</p>
@@ -223,7 +223,7 @@
                 </div>
                 <div class="portfolio-EN gallery-image prototypes">
                     <div class="each-item">
-                        <img class="port-image" src="img/Portfolio/Uoa-01.png" alt="Design and funcional prototype of a babay carryt bag"/>
+                        <img class="port-image" src="img/Portfolio/01-upa.png" alt="Design and funcional prototype of a babay carryt bag"/>
                         <div class="cap1">
                             <h3  class="h3-mob">UPA!</h3>
                             <p class="p-mob">Baby carring prototype</p>
@@ -235,7 +235,7 @@
                 </div>
                 <div class="portfolio-EN gallery-image prototypes">
                     <div class="each-item">
-                        <img class="port-image" src="img/Portfolio/inter2.png" alt="Design and funcional prototype of a babay carryt bag"/>
+                        <img class="port-image" src="img/Portfolio/01-inter.png" alt="Design and funcional prototype of a babay carryt bag"/>
                         <div class="cap1">
                             <h3  class="h3-mob">Furniture</h3>
                             <p  class="p-mob">Workstation with Knoll´s designs</p>
@@ -247,7 +247,7 @@
                 </div>
                 <div class="portfolio-EN gallery-image render">
                     <div class="each-item">
-                        <img class="port-image" src="img/Portfolio/Render-01.png" alt="3D design model of a magic box for Steampunk style"/>
+                        <img class="port-image" src="img/Portfolio/01-render.png" alt="3D design model of a magic box for Steampunk style"/>
                         <div class="cap1">
                             <h3  class="h3-mob">Renders</h3>
                             <p class="p-mob">3D Modeling and render</p>
