--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-bike.png" class="img-responsive" alt="Bicle station for Montevideo goverment (Uruguay)">
+                                    <img src="img/Portfolio/01-bike.png" class="img-responsive" alt="Bicle station for Montevideo goverment (Uruguay)">
                                     <div class="cap1">
                                         <h3>Bicycle Station</h3>
                                         <p>Desing and render for Montevideo goverment (Uruguay)</p>
@@ -271,7 +271,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-render.png" class="img-responsive" alt="3D model of Van Helsigns box design">
+                                    <img src="img/Portfolio/01-render.png" class="img-responsive" alt="3D model of Van Helsigns box design">
                                     <div class="cap1">
                                         <h3>3D Modeling & Renders</h3>
                                         <p>Solidworks& Keyshot</p>
@@ -286,7 +286,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image model metal">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-metal.png" class="img-responsive" alt="Box laser cut metal and cnc creation">
+                                    <img src="img/Portfolio/01-metal.png" class="img-responsive" alt="Box laser cut metal and cnc creation">
                                     <div class="cap1">
                                         <h3>Metal Design</h3>
                                         <p>Laser cut metal and cnc creation</p>
@@ -301,7 +301,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image stand model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-stanCva.png" class="img-responsive" alt="Exibtion Stand Design">
+                                    <img src="img/Portfolio/01-stanCva.png" class="img-responsive" alt="Exibtion Stand Design">
                                     <div class="cap1">
                                         <h3 class="h3-mob">CVA SA</h3>
                                         <p class="p-mob">Exibtion Stand Design</p>
@@ -316,7 +316,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image packaging model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-pack.png" class="img-responsive" alt="Design and develop of packaging of Coconuts milk">
+                                    <img src="img/Portfolio/01-pack.png" class="img-responsive" alt="Design and develop of packaging of Coconuts milk">
                                     <div class="cap1">
                                         <h3>Coconuts Milk</h3>
                                         <p>Design and develop of packaging</p>
@@ -331,7 +331,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-renderCVA.png" class="img-responsive" alt="wheel carrier 3D model">
+                                    <img src="img/Portfolio/01-renderCVA.png" class="img-responsive" alt="wheel carrier 3D model">
                                     <div class="cap1">
                                         <h3>3D models for CVA SA</h3>
                                         <p>3D Modeling & Renders</p>
@@ -346,7 +346,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image prototype">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-upa.png" class="img-responsive" alt="Upa! a Baby carring prototype">
+                                    <img src="img/Portfolio/01-upa.png" class="img-responsive" alt="Upa! a Baby carring prototype">
                                     <div class="cap1">
                                         <h3>UPA!</h3>
                                         <p>Baby carring prototype</p>
@@ -361,7 +361,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image prototype model">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-dandii.png" class="img-responsive" alt="Fruit dryer for cocktails">
+                                    <img src="img/Portfolio/01-dandii.png" class="img-responsive" alt="Fruit dryer for cocktails">
                                     <div class="cap1">
                                         <h3  class="h3-mob">Dandii</h3>
                                         <p class="p-mob">Fruit dryer for cocktails</p>
@@ -376,7 +376,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image prototype">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-inter.png" class="img-responsive" alt="Workstation with Knoll´s designs">
+                                    <img src="img/Portfolio/01-inter.png" class="img-responsive" alt="Workstation with Knoll´s designs">
                                     <div class="cap1">
                                         <h3>Furniture</h3>
                                         <p>Workstation with Knoll´s designs</p>
@@ -391,7 +391,7 @@
                         <div class="col-sm-6 col-md-3 col-lg-3 gallery-image prototype">
                             <div class="portfolio-item">
                                 <div class="hover-bg">
-                                    <img src="img/portfolio/01-stan.png" class="img-responsive" alt="Design of exibition stand for Coconuts Milk">
+                                    <img src="img/Portfolio/01-stan.png" class="img-responsive" alt="Design of exibition stand for Coconuts Milk">
                                     <div class="cap1">
                                         <h3>Coconuts Milk</h3>
                                         <p>Design of exibition stand</p>
